--- a/aplicacion1/src/index.html
+++ b/aplicacion1/src/index.html
@@ -7,9 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/styles.css"/>
+<!--hola-->
+
 </head>
 <body>
-
-<app-root></app-root>
+<div class="col-lg-11">
+<app-root>loading...</app-root>
+</div>
 </body>
 </html>
